[package]
name = "yen-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.4"
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.20"
miette = { version = "5.10.0", features = ["fancy"] }
